<resources>
    <string name="app_name">Mandi</string>
    <string name="mandi">Mandi</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="grains">Grains</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="govt_price">Govt M.R.P.</string>
    <string name="zero">0</string>
    <string name="crop_name">Crop Name</string>
    <string name="crop_type">Crop Type</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="cart">Cart</string>
    <string name="profile">profile</string>
    <string name="empty_cart">Your cart is empty. Start shopping now!</string>
    <string name="rupee">"\u20B9"</string>
    <string name="vendor_details">View vendor details</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="add_quantity">Add quantity</string>
    <string name="other_products">Other products on this vendor</string>
    <string name="enter_mobile">Enter your mobile number</string>
    <string name="enter_otp">Enter 5 digit otp</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend otp</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter your name</string>
    <string name="select_state">Select your state</string>
    <string name="select_city">Select your city</string>
    <string name="enter_address">Enter your shipping address</string>
    <string name="enter_pin">Enter your pin code</string>
    <string name="change">change</string>
    <string name="my_orders">My orders</string>
    <string name="my_crops">My crops</string>
    <string name="notification">Notifications</string>
    <string name="logout">Logout</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="user">User</string>
    <string name="farmer">Farmer</string>
    <string name="vendor">Vendor</string>
    <string name="oops">Oops...!</string>
    <string name="something_wrong">Something went wrong...</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="add_crop">Add Crop</string>
    <string name="switch_to_user">Switch to user account</string>
    <string name="switch_to_vendor">Switch to vendor account</string>
    <string name="select_crop">Please select a crop to add.</string>
    <string name="enter_qty">Enter maximum quantity you can sell</string>
    <string name="enter_price">Set your selling price</string>
    <string name="zero_per_quintol">\u20B9 0/Quintol</string>
    <string name="enter_description">Enter description of crop</string>
    <string name="add_images">Add Crop Images</string>
    <string name="save_changes">Save changes</string>
    <string name="set_address">Set your address</string>
    <string name="mandi_price">Mandi Price</string>
    <string name="no_vendor">There is no vendor available for this crop</string>
    <string name="no_internet">No internet connection...</string>
    <string name="choose_address">Please choose your delivery address</string>
    <string name="checkout">CHECKOUT</string>
    <string name="zero_order">You do not have any pending order!</string>
    <string name="zero_notification">You do not have any notification!</string>
    <string name="kg"> Kg</string>
    <string name="quintol"> Quintol</string>
    <string name="per_kg">/Kg</string>
    <string name="per_quintol">/Quintol</string>
    <string name="quantity">Quantity</string>
    <string name="remaining_stock">Remaining Stock: </string>
    <string name="add_crop_quantity">ADD QUANTITY</string>
    <string name="remove_quantity">REMOVE QUANTITY</string>
    <string name="change_price">Change your crop price</string>
    <string name="set_new_price">Set your new price</string>
    <string name="cancel">cancel</string>
    <string name="empty_my_crop_txt">You do not have any crop to sell. Please add some crops!</string>
    <string name="my_orders_tv">My Orders</string>
    <string name="item_qty">Item Quantity: </string>
    <string name="item_cost">Item Cost: </string>
    <string name="order_cost">Order Cost: </string>
    <string name="order_status">Status</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_placed">Placed</string>
    <string name="order_confirmed">Confirmed</string>
    <string name="order_delivered">Delivered</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="customer">Customer</string>
    <string name="delivery_address">Enter your delivery address</string>
    <string name="order_id">Order Id : </string>
    <string name="track_order">track order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
