<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/cart" />
    <item
        android:id="@+id/my_orders"
        android:icon="@drawable/ic_my_orders"
        android:title="@string/my_orders" />
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notification_grey"
        android:title="@string/notification"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>