<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.farmer.fragments.farmer_my_crops"
    android:background="@color/white">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_container" />
    <ProgressBar
        android:id="@+id/fetchingCropsPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/edit_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <include
            layout="@layout/crop_vendors_list_item"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding">
            <TextView
                android:id="@+id/add_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_crop_quantity"
                android:textColor="@color/white"
                android:background="@drawable/cust_veg_back"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/padding"
                android:layout_margin="@dimen/margin"/>
            <TextView
                android:id="@+id/remove_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_quantity"
                android:textColor="@color/green"
                android:background="@drawable/cust_veg_white_back"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/padding"
                android:layout_margin="@dimen/margin"/>
        </LinearLayout>
        <EditText
            android:id="@+id/qty_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:textColor="@color/black"
            android:padding="@dimen/padding"
            android:inputType="number"
            android:visibility="visible"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin">
            <RadioButton
                android:id="@+id/kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:buttonTint="@color/green"
                android:textColor="@color/green"
                android:checked="true"
                android:layout_marginEnd="@dimen/margin"/>
            <RadioButton
                android:id="@+id/quintol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quintol"
                android:buttonTint="@color/green"
                android:textColor="@color/green"
                android:layout_marginStart="@dimen/margin"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_price"
            android:textColor="@color/green"
            android:fontFamily="@font/amarante"
            android:padding="@dimen/padding"
            android:background="@color/white"
            android:textSize="@dimen/list_title" />
        <EditText
            android:id="@+id/price_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:textColor="@color/black"
            android:padding="@dimen/padding"
            android:inputType="number"
            android:visibility="visible"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:hint="@string/set_new_price"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin">
            <RadioButton
                android:id="@+id/per_kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_kg"
                android:buttonTint="@color/green"
                android:textColor="@color/green"
                android:checked="true"
                android:layout_marginEnd="@dimen/margin"/>
            <RadioButton
                android:id="@+id/per_quintol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_quintol"
                android:buttonTint="@color/green"
                android:textColor="@color/green"
                android:layout_marginStart="@dimen/margin"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:visibility="gone">
        <Button
            android:id="@+id/save_changes_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:textColor="@drawable/change_text_color_on_press"
            android:background="@drawable/change_background_on_press"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@drawable/change_text_color_on_press"
            android:background="@drawable/change_background_on_press"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_marginBottom="@dimen/margin" />
    <include
        android:id="@+id/error_view"
        layout="@layout/something_went_wrong"
        android:visibility="gone"/>
    <include
        android:id="@+id/empty_page"
        layout="@layout/empty_cart"
        android:visibility="gone"/>


</RelativeLayout>