<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.farmer.activites.AddCropCredentials"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:layout_weight="1"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/loading_image"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin">
                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"/>
                <ProgressBar
                    android:id="@+id/image_progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progress="20"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:visibility="gone"
                    android:indeterminate="false"
                    android:layout_gravity="center"
                    android:progressDrawable="@drawable/circle"
                    android:padding="@dimen/padding"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:text="Uploading please wait..."
                    android:textColor="@color/green"
                    android:fontFamily="@font/amarante"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/crop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/crop_name"
                android:textSize="@dimen/page_title"
                android:gravity="center"
                android:textColor="@color/green"
                android:fontFamily="@font/amarante"
                android:layout_weight="1"
                android:background="@drawable/cust_white_gray"
                android:layout_margin="@dimen/margin"/>
            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/zero_per_quintol"
                android:textSize="@dimen/page_title"
                android:gravity="center"
                android:textColor="@color/green"
                android:fontFamily="@font/amarante"
                android:layout_weight="1"
                android:background="@drawable/cust_white_gray"
                android:layout_margin="@dimen/margin"/>

        </LinearLayout>
        <TextView
            android:id="@+id/add_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/change_background_on_press"
            android:text="@string/add_images"
            android:padding="@dimen/padding"
            android:gravity="center"
            android:layout_margin="@dimen/margin"
            android:textColor="@drawable/change_text_color_on_press"
            android:fontFamily="@font/amarante"
            android:drawableEnd="@drawable/ic_add_a_photo_black_24dp"
            android:drawableTint= "@color/green"/>`
        <EditText
            android:id="@+id/set_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/enter_qty"
            android:textColor="@color/green"
            android:padding="@dimen/padding"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin">
            <RadioButton
                android:id="@+id/kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:fontFamily="@font/amarante"
                android:textColor="@color/green"
                android:buttonTint="@color/green"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/quintol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quintol"
                android:fontFamily="@font/amarante"
                android:textColor="@color/green"
                android:buttonTint="@color/green"/>
        </RadioGroup>

        <EditText
            android:id="@+id/set_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789"
            android:hint="@string/enter_price"
            android:textColor="@color/green"
            android:padding="@dimen/padding"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin">
            <RadioButton
                android:id="@+id/per_kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_kg"
                android:fontFamily="@font/amarante"
                android:textColor="@color/green"
                android:buttonTint="@color/green"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/per_quintol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_quintol"
                android:fontFamily="@font/amarante"
                android:textColor="@color/green"
                android:buttonTint="@color/green"/>
        </RadioGroup>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_description"
            android:textColor="@color/green"
            android:padding="@dimen/padding"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>
            <Button
                android:id="@+id/add_crop_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/change_background_on_press"
                android:text="@string/add_crop"
                android:textColor="@drawable/change_text_color_on_press"
                android:layout_marginTop="@dimen/margin"
                android:layout_margin="@dimen/margin"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>