<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipe_refresh"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.user.fragments.home"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/add_crop_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/select_crop"
            android:gravity="center"
            android:background="@color/green"
            android:textColor="@color/white"
            android:fontFamily="@font/amarante"
            android:textSize="@dimen/page_title"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/cust_veg_white_back"
            android:hint="@string/search"
            android:textSize="@dimen/text_input"
            android:textCursorDrawable="@null" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/padding">
            <TextView
                android:id="@+id/vegetables"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegetables"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:textSize="@dimen/tab_text"
                android:fontFamily="@font/amarante"
                android:background="@drawable/cust_veg_back"
                android:layout_margin="@dimen/margin"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/grains"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grains"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:textSize="@dimen/tab_text"
                android:fontFamily="@font/amarante"
                android:background="@drawable/cust_grain_white_back"
                android:layout_margin="@dimen/margin"
                android:textColor="@color/wheat"/>
            <TextView
                android:id="@+id/fruits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fruits"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:textSize="@dimen/tab_text"
                android:fontFamily="@font/amarante"
                android:background="@drawable/cust_fruit_white_back"
                android:layout_margin="@dimen/margin"
                android:textColor="@color/apple"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <include
                android:id="@+id/error_view"
                layout="@layout/something_went_wrong"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>